# noshow-iq-66426

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: ci-cd.yml  lint.yml
models/: .gitkeep  model.joblib
noshow_iq/: __init__.py  api.py  config.py  db.py  model.py  preprocess.py
scripts/: generate_data.py  generate_report.py  make_screenshots.py
tests/: test_api.py  test_model.py  test_preprocess.py
